--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0",
+  "version": "0.0.1",
   "changelog": {
     "labels": {
       "tag: new feature": ":rocket: New Feature",
@@ -14,7 +14,7 @@
     },
     "cacheDir": ".changelog"
   },
-  "commands": {
+  "command": {
     "publish": {
       "message": "chore(release): publish %v"
     }
