--- a/packages/module1/package.json
+++ b/packages/module1/package.json
@@ -7,11 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "dependencies": {
     "eslint": "^4.18.1",
     "lint-staged": "^7.0.0",
     "module2": "^0.0.1",
     "prettier": "^1.10.2"
-  }
+  },
+  "gitHead": "aff9e1a617b39e13a2863da543941b07778b032b"
 }
