--- a/packages/module2/package.json
+++ b/packages/module2/package.json
@@ -7,9 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "dependencies": {
     "husky": "^1.3.1",
     "webpack-bundle-analyzer": "^3.5.2"
-  }
+  },
+  "gitHead": "aff9e1a617b39e13a2863da543941b07778b032b"
 }
