--- a/packages/module1/package.json
+++ b/packages/module1/package.json
@@ -1,18 +1,12 @@
 {
   "name": "module1",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "UNLICENSED",
-  "dependencies": {
-    "eslint": "^4.18.1",
-    "lint-staged": "^7.0.0",
-    "module2": "^0.0.3",
-    "prettier": "^1.10.2"
-  },
-  "gitHead": "1c7923fcae305987c31e113dbc776cea843a07dd"
+  "license": "UNLICENSED"
 }
