--- a/packages/module1/package.json
+++ b/packages/module1/package.json
@@ -8,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "gitHead": "b148d6b6ffbf9f62e9ce2b21f714e96978d0f5a4"
 }
